# charging-infrastructure-in-germany

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: update_data.yml  update_kba_data.yml
.serena/: project.yml
.streamlit/: config.toml
00_archive/: dashboard_map_not_working.py  map_only.py  test.py
01_app/: _data_version.py  app.py  config.py  dashboard_no_map.py  data_loading.py  filters.py
01_app/sections/: __init__.py  analyses.py  data_table.py  header.py  info.py  kpis.py  map_view.py  timeseries.py
02_data/02_meta_data/: BNetzALSR_Metadaten_AUFBEREITETEDATEN (2).xlsx
02_data/03_computed_data/: kba_ev_bestand.parquet
plans/: 2026-06-25_api-anbindung.md  2026-06-26_offizielle-api-implementierung.md  2026-06-26_tests-0-setup.md  2026-06-26_tests-1-update-data.md  2026-06-26_tests-2-update-kba-data.md  2026-06-26_tests-3-filters.md  2026-06-26_tests-4-data-loading.md  2026-06-26_tests-5-smoke.md  2026-07-06_daten-tab.md  2026-07-06_kpis-zweite-reihe.md
scripts/: update_data.py  update_kba_data.py
