[project]
name = "charging-infrastructure-in-germany"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "pandas>=2.3.3",
    "plotly>=6.7.0",
    "pyarrow>=23.0.1",
    "streamlit==1.54.0",
    "streamlit-folium>=0.27.1",
]
